use @enablePreview instead